--- a/css/devSon.css
+++ b/css/devSon.css
@@ -52,7 +52,8 @@
     padding-left: 30px;
     margin-right: auto;
     margin-left: auto;
-}}
+}
+}
 @media (min-width: 992px){
 .carousel .container {
     max-width: 100%;
@@ -72,6 +73,91 @@
     padding-left: 25px;
 }
 /* section carousel end */
+/* section tools start */
+.tools{
+    background-color: var(--bg-color);
+}
+.tools .sub-title {
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 700;
+    color: var(--primary);
+    text-transform: uppercase;
+    margin-bottom: 5px;
+}
+.tools .header-section {
+    max-width: 750px;
+    margin: 0 auto; 
+}
+.tools .header-section p {
+    max-width: 750px;
+    margin: 0 auto; 
+}
+.tools .header-section h3 {
+    color: var(--title-color);
+    font-size: 46px;
+    line-height: 1;
+    font-weight: 700;
+}
+.tools .header-section p {
+    color: var(--text-color);
+    font-size: 16px;
+    line-height: 22.5px;
+    font-weight: 400;
+    margin-left: auto;
+    margin-right: auto;
+}
+.tools .s-block {
+    border-radius: var(--card-curve);
+    transition: 0.3s ease-in;
+    background: var(--light-bg-color);
+    padding: 3rem 2rem;
+    border: 1px solid var(--light-bg-color);
+}
+
+.tools .s-block h3 {
+    color: var(--title-color);
+    font-size: 26px;
+    line-height: 35px;
+    font-weight: 700;
+}
+.tools .s-block:hover {
+    transition: 0.3s ease-in;
+    background: var(--bg-color);
+    border: 1px solid var(--border-color-light);
+    box-shadow: var( --card-hover-box-shadow);
+    transform: var( --transformY);
+}
+.tools .s-block p {
+    color: var(--text-color);
+    margin-top: 15px;
+    font-size: 16px;
+    line-height: 24.5px;
+}
+@media (min-width: 576px){
+.tools .container {
+    max-width: 100%;
+    padding-right: 30px;
+    padding-left: 30px;
+    margin-right: auto;
+    margin-left: auto;
+}
+}
+@media (min-width: 992px){
+.tools .container {
+    max-width: 100%;
+    padding-right: 25px;
+    padding-left: 25px;
+    margin-right: auto;
+    margin-left: auto;
+}
+}
+.tools .container{
+    max-width: 1200px;
+    padding-right: 25px;
+    padding-left: 25px;
+}
+/* section tools end */
 /* section aubouUS star */
 .aboutUs{
     background-color: var(--light-bg-color);
