--- a/css/devSon.css
+++ b/css/devSon.css
@@ -339,6 +339,9 @@ img.shadow {
     background-color: #e2e6ea;
     border-color: #dae0e5; 
 }
+.commitment .btn-light:focus{
+    box-shadow: 0 0 0 0.2rem rgba(216, 217, 219, 0.5);
+}
 @media (min-width: 768px){
 .commitment .mb-md-5 {
     margin-bottom: 3rem!important;
