--- a/css/devCuong.css
+++ b/css/devCuong.css
@@ -373,7 +373,10 @@ header .search-right .pop-overlay:target {
 /* FEATURE */
 .feature {
     background-color: var(--bg-color);
+    padding: 3rem 0 4.5rem;
 }
+
+
 
 .feature .container {
     max-width: 1200px;
